--- a/src/components/Services/Services.css
+++ b/src/components/Services/Services.css
@@ -64,9 +64,10 @@
 @media screen and (max-width: 480px) {
   .services {
     margin-top: 0;
+    display: flex;
     flex-direction: column;
     gap: 5rem;
-    height: 66rem;
+    height: auto;
     padding: 0;
   }
 
@@ -80,3 +81,5 @@
     position: static;
   }
 }
+
+
