--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -1,7 +1,8 @@
 .contact-form{
     padding: 0 3rem 0 3rem;
     display: flex;
-    height: 80vh;
+    width: auto;
+    height: auto;
     margin-top: 4rem;
       /* scroll */
   padding-top: 3rem;
